microservices/app-albums/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-albums
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: app-albums
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-albums
    spec:
      containers:
        - name: app-albums
          image: k3d-example-registry:5000/app-albums
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
