microservices/app-albums/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-albums
spec:
  selector:
    app.kubernetes.io/name: app-albums
  ports:
    - name: http
      port: 80
      targetPort: http
