microservices/app-albums/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-albums
spec:
  rules:
    - host: albums.app.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-albums
                port:
                  name: http
